@@ -282,6 +282,7 @@ export(labeller)
 export(labs)
 export(last_plot)
 export(layer)
+export(lims)
 export(map_data)
 export(mean_cl_boot)
 export(mean_cl_normal)
