@@ -1,17 +1,21 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/limits.r
-\name{xlim}
+\name{lims}
+\alias{lims}
 \alias{xlim}
 \alias{ylim}
-\title{Convenience functions to set the limits of the x and y axis.}
+\title{Convenience functions to set the axis limits.}
 \usage{
+lims(...)
+
 xlim(...)
 
 ylim(...)
 }
 \arguments{
-\item{...}{if numeric, will create a continuous scale, if factor or
-character, will create a discrete scale.}
+\item{...}{If numeric, will create a continuous scale, if factor or
+character, will create a discrete scale.  For \code{lims}, every
+argument must be named.}
 }
 \description{
 Observations not in this range will be dropped completely and
@@ -24,6 +28,7 @@ xlim(15, 20)
 xlim(20, 15)
 xlim(c(10, 20))
 xlim("a", "b", "c")
+
 ggplot(mtcars, aes(mpg, wt)) +
   geom_point() +
   xlim(15, 20)
@@ -32,17 +37,10 @@ ggplot(mtcars, aes(mpg, wt)) +
   geom_point() +
   xlim(NA, 20)
 
-# ylim
-ylim(15, 20)
-ylim(c(10, 20))
-ylim("a", "b", "c")
+# Change both xlim and ylim
 ggplot(mtcars, aes(mpg, wt)) +
   geom_point() +
-  ylim(0, 4)
-# with automatic upper limit
-ggplot(mtcars, aes(mpg, wt)) +
-  geom_point() +
-  ylim(0, NA)
+  lims(x = c(10, 20), y = c(3, 5))
 }
 \seealso{
 For changing x or y axis limits \strong{without} dropping data
