@@ -1,6 +1,8 @@
 ggplot2 1.0.1.9000
 ----------------------------------------------------------------
 
+* `lims()` makes it easy to set the limits of any axis (#1138).
+
 * `geom_point()` changes the default shape from 16 to 19 - this has a
   better display on the default linux graphics device. (It's very slightly
   smaller than the old point, but it should affect any graphics significantly)
